--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 
-# Fabric Properties (https://modmuss50.me/fabric.html)
-minecraft_version=1.18.2
-yarn_mappings=1.18.2+build.2
-loader_version=0.13.3
+# Fabric Properties from https://fabricmc.net/develop
+minecraft_version=1.19
+yarn_mappings=1.19+build.4
+loader_version=0.14.8
 
 # Mod Properties
-mod_version=0.0.1
-maven_group=io.github.theRookieCoder
+mod_version=0.0.2
+maven_group=io.github.therookiecoder
 archives_base_name=stairautojump
