Update README.md with MD & CF project pages Add minotaur and cursegradle

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'fabric-loom' version '0.12-SNAPSHOT'
+    id 'com.modrinth.minotaur' version '2.3.+'
+    id 'com.matthewprenger.cursegradle' version '1.4.+'
 }
 
 version = project.mod_version
@@ -36,4 +38,76 @@ java {
     }
     archivesBaseName = project.archives_base_name
     withSourcesJar()
+}
+
+// TODO: Update this every release
+def changelog = ""
+
+modrinth {
+    token = System.getenv("MODRINTH_TOKEN")
+    versionName = "StairAutoJump ${version}"
+    versionNumber = version
+    projectId = "shbn27fi"
+    uploadFile = remapJar
+    versionType = "beta"
+    changelog
+    loaders = ["fabric", "quilt"]
+    gameVersions = [
+        "1.14",
+        "1.14.1",
+        "1.14.2",
+        "1.14.3",
+        "1.14.4",
+        "1.15",
+        "1.15.1",
+        "1.15.2",
+        "1.16",
+        "1.16.1",
+        "1.16.2",
+        "1.16.3",
+        "1.16.4",
+        "1.16.5",
+        "1.17",
+        "1.17.1",
+        "1.18",
+        "1.18.1",
+        "1.18.2",
+        "1.19"
+    ]
+    syncBodyFrom = rootProject.file("README.md").text
+}
+
+curseforge {
+    apiKey = System.getenv("CURSEFORGE_TOKEN")
+    project {
+        id = "634697"
+        releaseType = "beta"
+        addGameVersion("1.14")
+        addGameVersion("1.14.1")
+        addGameVersion("1.14.2")
+        addGameVersion("1.14.3")
+        addGameVersion("1.14.4")
+        addGameVersion("1.15")
+        addGameVersion("1.15.1")
+        addGameVersion("1.15.2")
+        addGameVersion("1.16")
+        addGameVersion("1.16.1")
+        addGameVersion("1.16.2")
+        addGameVersion("1.16.3")
+        addGameVersion("1.16.4")
+        addGameVersion("1.16.5")
+        addGameVersion("1.17")
+        addGameVersion("1.17.1")
+        addGameVersion("1.18")
+        addGameVersion("1.18.1")
+        addGameVersion("1.18.2")
+        addGameVersion("1.19")
+        addGameVersion("Fabric")
+        addGameVersion("Quilt")
+        mainArtifact(remapJar) {
+            changelogType = "markdown"
+            changelog
+            displayName = "SnowyLeavesPlus ${version}"
+        }
+    }
 }
